setup firebase authentication

--- a/serverless-trivia-frontend/src/components/layout/Header/Header.scss
+++ b/serverless-trivia-frontend/src/components/layout/Header/Header.scss
@@ -1,5 +1,5 @@
-$header-bg: #00aaff;
-$header-color: #333;
+$header-bg: rgb(4, 59, 114);
+$header-color: rgb(255, 255, 255);
 
 .header {
   background-color: $header-bg;
