showing multiple questions to the user

--- a/serverless-trivia-frontend/src/pages/InGameExperience/components/InGameQuestions.scss
+++ b/serverless-trivia-frontend/src/pages/InGameExperience/components/InGameQuestions.scss
@@ -50,4 +50,11 @@
       }
     }
   }
+
+  .question-no {
+    color: #4caf50;
+  } 
   
+  .question-description {
+    color: cornflowerblue;
+  }
